--- a/model/core/scheme/grammar.tex
+++ b/model/core/scheme/grammar.tex
@@ -33,6 +33,6 @@ $E_{S}$ & $=$ & $[\,]_{S}$ $\vert$ $E_{S}$ $e_{S}$ $\vert$ $v_{S}$ $E_{S}$ $\ver
 
 && $\vert$ $\mathtt{cons}$ $E_{S}$ $e_{S}$ $\vert$ $\mathtt{cons}$ $v_{S}$ $E_{S}$
 \end{tabular}
-\caption{Core Scheme grammar and evaluation contexts}
+\caption{Scheme core grammar and evaluation contexts}
 \label{csg}
 \end{figure}
