--- a/model/interoperation/haskell/grammar.tex
+++ b/model/interoperation/haskell/grammar.tex
@@ -21,6 +21,6 @@ $a$ & $=$ & Type labels (a, b, \ldots) \\
 
 $E_{H}$ & $=$ & $\cdots$ $\vert$ $^{T}HM^{T}$ $E_{M}$ $\vert$ $^{T}HS$ $E_{S}$
 \end{tabular}
-\caption{Interoperation Haskell grammar and evaluation contexts}
+\caption{Haskell interoperation grammar and evaluation contexts}
 \label{ihg}
 \end{figure}
