--- a/model/interoperation/scheme/grammar.tex
+++ b/model/interoperation/scheme/grammar.tex
@@ -13,6 +13,6 @@ $v_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{[T]}$ $(\mathtt{cons}$ $e_{H}$ $e_{H})$ $\
 
 $E_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{T}$ $E_{H}$ $\vert$ $SM^{T}$ $E_{M}$
 \end{tabular}
-\caption{Interoperation Scheme grammar and evaluation contexts}
+\caption{Scheme interoperation grammar and evaluation contexts}
 \label{isg}
 \end{figure}
