--- a/model/interoperation/scheme/operational-semantics.tex
+++ b/model/interoperation/scheme/operational-semantics.tex
@@ -99,6 +99,6 @@ $\mathscr{E}[SH^{L}$ $(^{L}HS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$ \\
 % sm - lump
 $\mathscr{E}[SM^{L}$ $(^{L}MS$ $v_{S})]_{S}\rightarrow\mathscr{E}[v_{S}]$
 \end{tabular}
-\caption{Interoperation Scheme operational semantics}
+\caption{Scheme interoperation operational semantics}
 \label{isos}
 \end{figure}
