--- a/model/interoperation/scheme/typing-rules.tex
+++ b/model/interoperation/scheme/typing-rules.tex
@@ -4,6 +4,6 @@
 \quad
 \frac{\Gamma\vdash_{M}T\quad\Gamma\vdash_{M}e_{M}:T[T_{i}/T^{a}_{i}]}{\Gamma\vdash_{S}\;SM^{T}\;e_{M}:TST}
 \]
-\caption{Interoperation Scheme typing rules}
+\caption{Scheme interoperation typing rules}
 \label{istr}
 \end{figure}
