--- a/model/core/haskell/typing-rules.tex
+++ b/model/core/haskell/typing-rules.tex
@@ -2,13 +2,13 @@
 \[
 \frac{}{\vdash_{H}N}
 \quad
-\frac{X\in\Gamma}{\Gamma\vdash_{H}X}
+\frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}[T]}
 \quad
 \frac{\Gamma\vdash_{H}T_{1}\quad\Gamma\vdash_{H}T_{2}}{\Gamma\vdash_{H}T_{1}\rightarrow T_{2}}
 \quad
-\frac{\Gamma ,X\vdash_{H}T}{\Gamma\vdash_{H}\forall X.T}
+\frac{X\in\Gamma}{\Gamma\vdash_{H}X}
 \quad
-\frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}[T]}
+\frac{\Gamma ,X\vdash_{H}T}{\Gamma\vdash_{H}\forall X.T}
 \]
 \bigskip
 \[
@@ -33,21 +33,20 @@
 \[
 \frac{\Gamma\vdash_{H}e_{H}^{1}:N\quad\Gamma\vdash_{H}e_{H}^{2}:N}{\Gamma\vdash_{H}o\;e_{H}^{1}\;e_{H}^{2}:N}
 \quad
+\frac{\Gamma\vdash_{H}e_{H}:[T]}{\Gamma\vdash_{H}\mathtt{null?}\;e_{H}:N}
+\]
+\[
 \frac{\Gamma\vdash_{H}e_{H}^{1}:N\quad\Gamma\vdash_{H}e_{H}^{2}:T\quad\Gamma\vdash_{H}e_{H}^{3}:T}{\Gamma\vdash_{H}\mathtt{if0}\;e_{H}^{1}\;e_{H}^{2}\;e_{H}^{3}:T}
-\]
-\[
-\frac{\Gamma\vdash_{H}e_{H}:[T]}{\Gamma\vdash_{H}\mathtt{hd}\;e_{H}:T}
 \quad
-\frac{\Gamma\vdash_{H}e_{H}:[T]}{\Gamma\vdash_{H}\mathtt{tl}\;e_{H}:[T]}
+\frac{\Gamma\vdash_{H}e_{H}:[T]}{\Gamma\vdash_{H}\mathtt{hd}\;e_{H}:T}
 \]
 \[
-\frac{\Gamma\vdash_{H}e_{H}^{1}:[T_{1}]\quad\Gamma\vdash_{H}e_{H}^{2}:T_{2}\quad\Gamma\vdash_{H}e_{H}^{3}:T_{2}}{\Gamma\vdash_{H}\mathtt{ifnil}\;e_{H}^{1}\;e_{H}^{2}\;e_{H}^{3}:T_{2}}
+\frac{\Gamma\vdash_{H}e_{H}:[T]}{\Gamma\vdash_{H}\mathtt{tl}\;e_{H}:[T]}
 \quad
 \frac{\Gamma\vdash_{H}e_{H}:T\rightarrow T}{\Gamma\vdash_{H}\mathtt{fix}\;e_{H}:T}
-\]
-\[
+\quad
 \frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}\mathtt{wrong}^{T}\;\mathrm{string}:T}
 \]
-\caption{Core Haskell typing rules}
+\caption{Haskell core typing rules}
 \label{chtr}
 \end{figure}
