--- a/model/core/scheme/typing-rules.tex
+++ b/model/core/scheme/typing-rules.tex
@@ -19,20 +19,17 @@
 \]
 \[
 \frac{\Gamma\vdash_{S}e_{S}^{1}:TST\quad\Gamma\vdash_{S}e_{S}^{2}:TST}{\Gamma\vdash_{S}o\;e_{S}^{1}\;e_{S}^{2}:TST}
+\quad
+\frac{\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{S}p\;e_{S}:TST}
 \]
 \[
 \frac{\Gamma\vdash_{S}e_{S}^{1}:TST\quad\Gamma\vdash_{S}e_{S}^{2}:TST\quad\Gamma\vdash_{S}e_{S}^{3}:TST}{\Gamma\vdash_{S}\mathtt{if0}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}:TST}
-\]
-\[
+\quad
 \frac{\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{S}f\;e_{S}:TST}
-\quad
-\frac{\Gamma\vdash_{S}e_{S}^{1}:TST\quad\Gamma\vdash_{S}e_{S}^{2}:TST\quad\Gamma\vdash_{S}e_{S}^{3}:TST}{\Gamma\vdash_{S}\mathtt{ifnil}\;e_{S}^{1}\;e_{S}^{2}\;e_{S}^{3}:TST}
 \]
 \[
-\frac{\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{S}p\;e_{S}:TST}
-\quad
 \frac{}{\vdash_{S}\mathtt{wrong}\;\mathrm{string}:TST}
 \]
-\caption{Core Scheme typing rules}
+\caption{Scheme core typing rules}
 \label{cstr}
 \end{figure}
