--- a/model/interoperation/ml/grammar.tex
+++ b/model/interoperation/ml/grammar.tex
@@ -21,6 +21,6 @@ $a$ & $=$ & Type labels (a, b, \ldots) \\
 
 $E_{M}$ & $=$ & $\cdots$ $\vert$ $^{T}MH^{T}$ $E_{H}$ $\vert$ $^{T}MS$ $E_{S}$
 \end{tabular}
-\caption{Interoperation ML grammar and evaluation contexts}
+\caption{ML interoperation grammar and evaluation contexts}
 \label{img}
 \end{figure}
