--- a/model/interoperation/ml/typing-rules.tex
+++ b/model/interoperation/ml/typing-rules.tex
@@ -10,6 +10,6 @@
 \quad
 \frac{\Gamma\vdash_{M}T\quad\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{M}\;^{T}MS\;e_{S}:T[T_{i}/T^{a}_{i}]}
 \]
-\caption{Interoperation ML typing rules}
+\caption{ML interoperation typing rules}
 \label{imtr}
 \end{figure}
