--- a/model/haskell/typing-rules.tex
+++ b/model/haskell/typing-rules.tex
@@ -1,27 +1,32 @@
 \begin{figure}[p]
 \[
+\frac{}{\vdash_{H}L}
+\quad
 \frac{}{\vdash_{H}N}
 \quad
+\frac{X\in\Gamma}{\Gamma\vdash_{H}X}
+\]
+\[
 \frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}[T]}
 \quad
-\frac{\Gamma\vdash_{H}T_{1}\quad\Gamma\vdash_{H}T_{2}}{\Gamma\vdash_{H}T_{1}\rightarrow T_{2}}
+\frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}T^{a}}
 \quad
-\frac{X\in\Gamma}{\Gamma\vdash_{H}X}
+\frac{\Gamma\vdash_{H}T_{1}\quad\Gamma\vdash_{H}T_{2}}{\Gamma\vdash_{H}T_{1}\rightarrow T_{2}}
 \quad
 \frac{\Gamma ,X\vdash_{H}T}{\Gamma\vdash_{H}\forall X.T}
 \]
 \bigskip
 \[
-\frac{}{\vdash_{H}\overline{n}:N}
-\quad
-\frac{\Gamma\vdash_{H}e_{H}^{1}:T\quad\Gamma\vdash_{H}e_{H}^{2}:[T]}{\Gamma\vdash_{H}\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}:[T]}
-\quad
-\frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}\mathtt{nil}^{T}:[T]}
-\]
-\[
 \frac{\Gamma\vdash_{H}T_{1}\quad\Gamma,x:T_{1}\vdash_{H}e_{H}:T_{2}}{\Gamma\vdash_{H}\lambda x:T_{1}.e_{H}:T_{1}\rightarrow T_{2}}
 \quad
 \frac{\Gamma,X\vdash_{H}e_{H}:T}{\Gamma\vdash_{H}\Lambda X.e_{H}:\forall X.T}
+\quad
+\frac{}{\vdash_{H}\overline{n}:N}
+\]
+\[
+\frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}\mathtt{nil}^{T}:[T]}
+\quad
+\frac{\Gamma\vdash_{H}e_{H}^{1}:T\quad\Gamma\vdash_{H}e_{H}^{2}:[T]}{\Gamma\vdash_{H}\mathtt{cons}\;e_{H}^{1}\;e_{H}^{2}:[T]}
 \quad
 \frac{x:T\in\Gamma}{\Gamma\vdash_{H}x:T}
 \]
@@ -47,6 +52,11 @@
 \quad
 \frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}\mathtt{wrong}^{T}\;\mathrm{string}:T}
 \]
-\caption{Haskell core typing rules}
-\label{chtr}
+\[
+\frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{M}T\quad\Gamma\vdash_{M}e_{M}:T}{\Gamma\vdash_{H}\;^{T}HM^{T}\;e_{M}:T}
+\quad
+\frac{\Gamma\vdash_{H}T\quad\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{H}\;^{T}HS\;e_{S}:T[T_{i}/T^{a}_{i}]}
+\]
+\caption{Haskell typing rules}
+\label{htr}
 \end{figure}
