--- a/model/ml/core-operational-semantics.tex
+++ b/model/ml/core-operational-semantics.tex
@@ -19,11 +19,15 @@ $\mathscr{E}[-$ $\overline{n_{1}}$ $\overline{n_{2}}]_{M}\rightarrow\mathscr{E}[
 
 \vspace{5pt}
 
+$\mathscr{E}[\mathtt{null?}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})]_{M}\rightarrow\mathscr{E}[\overline{1}]$ \\
+
+\vspace{5pt}
+
 $\mathscr{E}[\mathtt{null?}$ $\mathtt{nil}^{T}]_{M}\rightarrow\mathscr{E}[\overline{0}]$ \\
 
 \vspace{5pt}
 
-$\mathscr{E}[\mathtt{null?}$ $(\mathtt{cons}$ $e_{M}^{1}$ $e_{M}^{2})]_{M}\rightarrow\mathscr{E}[\overline{1}]$ \\
+$\mathscr{E}[\mathtt{null?}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{M}\rightarrow\mathscr{E}[\overline{1}]$ \\
 
 \vspace{5pt}
 
