--- a/model/ml/typing-rules.tex
+++ b/model/ml/typing-rules.tex
@@ -1,27 +1,32 @@
 \begin{figure}[p]
 \[
-\frac{}{\vdash_{M}N}
+\frac{}{\vdash_{H}L}
 \quad
-\frac{\Gamma\vdash_{M}T}{\Gamma\vdash_{M}[T]}
+\frac{}{\vdash_{H}N}
 \quad
-\frac{\Gamma\vdash_{M}T_{1}\quad\Gamma\vdash_{M}T_{2}}{\Gamma\vdash_{M}T_{1}\rightarrow T_{2}}
+\frac{X\in\Gamma}{\Gamma\vdash_{H}X}
+\]
+\[
+\frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}[T]}
 \quad
-\frac{X\in\Gamma}{\Gamma\vdash_{M}X}
+\frac{\Gamma\vdash_{H}T}{\Gamma\vdash_{H}T^{a}}
 \quad
-\frac{\Gamma,X\vdash_{M}T}{\Gamma\vdash_{M}\forall X.T}
+\frac{\Gamma\vdash_{H}T_{1}\quad\Gamma\vdash_{H}T_{2}}{\Gamma\vdash_{H}T_{1}\rightarrow T_{2}}
+\quad
+\frac{\Gamma ,X\vdash_{H}T}{\Gamma\vdash_{H}\forall X.T}
 \]
 \bigskip
-\[
-\frac{}{\vdash_{M}\overline{n}:N}
-\quad
-\frac{\Gamma\vdash_{M}e_{M}^{1}:T\quad\Gamma\vdash_{M}e_{M}^{2}:[T]}{\Gamma\vdash_{M}\mathtt{cons}\;e_{M}^{1}\;e_{M}^{2}:[T]}
-\quad
-\frac{\Gamma\vdash_{M}T}{\Gamma\vdash_{M}\mathtt{nil}^{T}:[T]}
-\]
 \[
 \frac{\Gamma\vdash_{M}T_{1}\quad\Gamma,x:T_{1}\vdash_{M}e_{M}:T_{2}}{\Gamma\vdash_{M}\lambda x:T_{1}.e_{M}:T_{1}\rightarrow T_{2}}
 \quad
 \frac{\Gamma,X\vdash_{M}e_{M}:T}{\Gamma\vdash_{M}\Lambda X.e_{M}:\forall X.T}
+\quad
+\frac{}{\vdash_{M}\overline{n}:N}
+\]
+\[
+\frac{\Gamma\vdash_{M}T}{\Gamma\vdash_{M}\mathtt{nil}^{T}:[T]}
+\quad
+\frac{\Gamma\vdash_{M}e_{M}^{1}:T\quad\Gamma\vdash_{M}e_{M}^{2}:[T]}{\Gamma\vdash_{M}\mathtt{cons}\;e_{M}^{1}\;e_{M}^{2}:[T]}
 \quad
 \frac{x:T\in\Gamma}{\Gamma\vdash_{M}x:T}
 \]
@@ -47,6 +52,11 @@
 \quad
 \frac{\Gamma\vdash_{M}T}{\Gamma\vdash_{M}\mathtt{wrong}^{T}\;\mathrm{string}:T}
 \]
-\caption{ML core typing rules}
-\label{cmtr}
+\[
+\frac{\Gamma\vdash_{M}T\quad\Gamma\vdash_{H}T\quad\Gamma\vdash_{H}e_{H}:T}{\Gamma\vdash_{M}\;^{T}MH^{T}\;e_{H}:T}
+\quad
+\frac{\Gamma\vdash_{M}T\quad\Gamma\vdash_{S}e_{S}:TST}{\Gamma\vdash_{M}\;^{T}MS\;e_{S}:T[T_{i}/T^{a}_{i}]}
+\]
+\caption{ML typing rules}
+\label{mtr}
 \end{figure}
