Reordered the OS rules, fixed a couple OS rules.  Reordered the S typing rules.  Reordered the figs in ch 2 to group lang figs together.

--- a/model/scheme/core-operational-semantics.tex
+++ b/model/scheme/core-operational-semantics.tex
@@ -23,11 +23,35 @@ $\mathscr{E}[o$ $v_{S}^{1}$ $v_{S}^{2}]_{S}\rightarrow\mathscr{E}[\mathtt{wrong}
 
 \vspace{5pt}
 
-$\mathscr{E}[\mathtt{null?}$ $(\mathtt{cons}$ $e_{S}^{1}$ $e_{S}^{2})]_{S}\rightarrow\mathscr{E}[\overline{1}]$ \\
+$\mathscr{E}[\mathtt{fun?}$ $(\lambda x.e_{S})]_{S}\rightarrow\mathscr{E}[\overline{0}]$ \\
+
+\vspace{5pt}
+
+$\mathscr{E}[\mathtt{fun?}$ $v_{S}]_{S}\rightarrow\mathscr{E}[\overline{1}]$ ($v_{S}\neq\lambda x.e_{S}$) \\
+
+\vspace{5pt}
+
+$\mathscr{E}[\mathtt{list?}$ $\mathtt{nil}]_{S}\rightarrow\mathscr{E}[\overline{0}]$ \\
+
+\vspace{5pt}
+
+$\mathscr{E}[\mathtt{list?}$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{S}\rightarrow\mathscr{E}[\overline{0}]$ \\
+
+\vspace{5pt}
+
+$\mathscr{E}[\mathtt{list?}$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{S}\rightarrow\mathscr{E}[\overline{0}]$ \\
+
+\vspace{5pt}
+
+$\mathscr{E}[\mathtt{list?}$ $v_{S}^{1}]_{S}\rightarrow\mathscr{E}[\overline{1}]$ $(v_{S}^{1}\not\in\lbrace\mathtt{nil},\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace)$ \\
 
 \vspace{5pt}
 
 $\mathscr{E}[\mathtt{null?}$ $\mathtt{nil}]_{S}\rightarrow\mathscr{E}[\overline{0}]$ \\
+
+\vspace{5pt}
+
+$\mathscr{E}[\mathtt{null?}$ $(\mathtt{cons}$ $e_{S}^{1}$ $e_{S}^{2})]_{S}\rightarrow\mathscr{E}[\overline{1}]$ \\
 
 \vspace{5pt}
 
@@ -39,7 +63,7 @@ $\mathscr{E}[\mathtt{null?}$ $v_{S}^{1}]_{S}\rightarrow\mathscr{E}[\mathtt{wrong
 
 \vspace{5pt}
 
-$\quad(v_{S}^{1}\not\in\lbrace\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3},\mathtt{nil},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace)$ \\
+$\quad(v_{S}^{1}\not\in\lbrace\mathtt{nil},\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace)$ \\
 
 \vspace{5pt}
 
@@ -51,43 +75,11 @@ $\mathscr{E}[\mathtt{num?}$ $v_{S}]_{S}\rightarrow\mathscr{E}[\overline{1}]$ $(v
 
 \vspace{5pt}
 
-$\mathscr{E}[\mathtt{list?}$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{S}\rightarrow\mathscr{E}[\overline{0}]$ \\
-
-\vspace{5pt}
-
-$\mathscr{E}[\mathtt{list?}$ $\mathtt{nil}]_{S}\rightarrow\mathscr{E}[\overline{0}]$ \\
-
-\vspace{5pt}
-
-$\mathscr{E}[\mathtt{list?}$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{S}\rightarrow\mathscr{E}[\overline{0}]$ \\
-
-\vspace{5pt}
-
-$\mathscr{E}[\mathtt{list?}$ $v_{S}^{1}]_{S}\rightarrow\mathscr{E}[\overline{1}]$ $(v_{S}^{1}\not\in\lbrace\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3},\mathtt{nil},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace)$ \\
-
-\vspace{5pt}
-
-$\mathscr{E}[\mathtt{fun?}$ $(\lambda x.e_{S})]_{S}\rightarrow\mathscr{E}[\overline{0}]$ \\
-
-\vspace{5pt}
-
-$\mathscr{E}[\mathtt{fun?}$ $v_{S}]_{S}\rightarrow\mathscr{E}[\overline{1}]$ ($v_{S}\neq\lambda x.e_{S}$) \\
-
-\vspace{5pt}
-
 $\mathscr{E}[\mathtt{if0}$ $\overline{0}$ $e_{S}^{1}$ $e_{S}^{2}]_{S}\rightarrow\mathscr{E}[e_{S}^{1}]$ \\
 
 \vspace{5pt}
 
 $\mathscr{E}[\mathtt{if0}$ $v_{S}$ $e_{S}^{1}$ $e_{S}^{2}]_{S}\rightarrow\mathscr{E}[e_{S}^{2}]$ $(v_{S}\neq\overline{0})$ \\
-
-\vspace{5pt}
-
-$\mathscr{E}[\mathtt{hd}$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{S}\rightarrow\mathscr{E}[v_{S}^{1}]$ \\
-
-\vspace{5pt}
-
-$\mathscr{E}[\mathtt{tl}$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{S}\rightarrow\mathscr{E}[v_{S}^{2}]$ \\
 
 \vspace{5pt}
 
@@ -99,7 +91,19 @@ $\mathscr{E}[\mathtt{tl}$ $\mathtt{nil}]_{S}\rightarrow\mathscr{E}[\mathtt{wrong
 
 \vspace{5pt}
 
-$\mathscr{E}[f$ $v_{S}^{1}]_{S}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Not a list"$]$ $(v_{S}^{1}\not\in\lbrace\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3},\mathtt{nil}\rbrace)$ \\
+$\mathscr{E}[\mathtt{hd}$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{S}\rightarrow\mathscr{E}[v_{S}^{1}]$ \\
+
+\vspace{5pt}
+
+$\mathscr{E}[\mathtt{tl}$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{S}\rightarrow\mathscr{E}[v_{S}^{2}]$ \\
+
+\vspace{5pt}
+
+$\mathscr{E}[f$ $v_{S}^{1}]_{S}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Not a list"$]$ \\
+
+\vspace{5pt}
+
+$\quad(v_{S}^{1}\not\in\lbrace\mathtt{nil},\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace)$ \\
 
 \vspace{5pt}
 
