--- a/model/scheme/grammar.tex
+++ b/model/scheme/grammar.tex
@@ -23,7 +23,7 @@ $o$ & $=$ & $+$ $\vert$ $-$ \\
 
 \vspace{5pt}
 
-$p$ & $=$ & $\mathtt{null?}$ $\vert$ $\mathtt{num?}$ $\vert$ $\mathtt{list?}$ $\vert$ $\mathtt{fun?}$ \\
+$p$ & $=$ & $\mathtt{fun?}$ $\vert$ $\mathtt{list?}$ $\vert$ $\mathtt{null?}$ $\vert$ $\mathtt{num?}$ \\
 
 \vspace{5pt}
 
