--- a/model/haskell/interoperation-operational-semantics.tex
+++ b/model/haskell/interoperation-operational-semantics.tex
@@ -3,6 +3,11 @@
 \begin{tabular}{l}
 \vspace{5pt}
 
+% hm - lump
+$\mathscr{E}[^{L}HM^{L}$ $(^{L}MS$ $v_{S})]_{H}\rightarrow\mathscr{E}[^{L}HS$ $v_{S}]$ \\
+
+\vspace{5pt}
+
 % hm - number
 $\mathscr{E}[^{N}HM^{N}$ $\overline{n}]_{H}\rightarrow\mathscr{E}[\overline{n}]$ \\
 
@@ -15,6 +20,55 @@ $\mathscr{E}[^{N}HS$ $\overline{n}]_{H}\rightarrow\mathscr{E}[\overline{n}]$ \\
 
 % hs - number error
 $\mathscr{E}[^{N}HS$ $v_{S}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Not a number"$]$ $(v_{S}\neq\overline{n})$ \\
+
+\vspace{5pt}
+
+% hm - list - nil
+$\mathscr{E}[^{[T]}HM^{[T]}$ $\mathtt{nil}^{T}]_{H}\rightarrow\mathscr{E}[\mathtt{nil}^{T}]$ \\
+
+\vspace{5pt}
+
+% hm - list - cons
+$\mathscr{E}[^{[T]}HM^{[T]}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})]_{H}\rightarrow\mathscr{E}[\mathtt{cons}$ $(^{T}HM^{T}$ $v_{M}^{1})$ $(^{[T]}HM^{[T]}$ $v_{M}^{2})]$ \\
+
+\vspace{5pt}
+
+% hm - list - mh cons
+$\mathscr{E}[^{[T]}HM^{[T]}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{H}\rightarrow\mathscr{E}[\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}]$ \\
+
+\vspace{5pt}
+
+% hs - list - nil
+$\mathscr{E}[^{[T]}HS$ $\mathtt{nil}]_{H}\rightarrow\mathscr{E}[\mathtt{nil}^{T[T_{i}/T_{i}^{a}]}]$ \\
+
+\vspace{5pt}
+
+% hs - list - cons
+$\mathscr{E}[^{[T]}HS$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{H}\rightarrow\mathscr{E}[\mathtt{cons}$ $(^{T}HS$ $v_{S}^{1})$ $(^{[T]}HS$ $v_{S}^{2})]$ \\
+
+\vspace{5pt}
+
+% hs - list - sh cons
+$\mathscr{E}[^{[T]}HS$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{H}\rightarrow\mathscr{E}[\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}]$ \\
+
+\vspace{5pt}
+
+% hs - list error
+$\mathscr{E}[^{[T]}HS$ $v_{S}^{1}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Not a list"$]$ \\
+
+\vspace{5pt}
+
+$\quad(v_{S}^{1}\not\in\lbrace\mathtt{nil},\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace)$ \\
+
+\vspace{5pt}
+
+% hs - label
+$\mathscr{E}[^{T^{a}}HS$ $(SH^{T^{a}}$ $e_{H})]_{H}\rightarrow\mathscr{E}[e_{H}]$ \\
+
+\vspace{5pt}
+
+% hs - label error
+$\mathscr{E}[^{T^{a}}HS$ $v_{S}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Parametricity violated"$]$ $(v_{S}\neq SH^{T^{a}}$ $e_{H})$ \\
 
 \vspace{5pt}
 
@@ -48,61 +102,7 @@ $\mathscr{E}[^{\forall X.T}HM^{\forall X.T}$ $(^{\forall X.T}MS$ $v_{S})]_{H}\ri
 \vspace{5pt}
 
 % hs - universal
-$\mathscr{E}[(^{\forall X.T_{1}}HS$ $v_{S})$ $\lbrace T_{2}\rbrace]_{H}\rightarrow\mathscr{E}[^{T_{1}[T^{a}_{2}/X]}HS$ $v_{S}]$ \\
-
-\vspace{5pt}
-
-% hm - list - cons
-$\mathscr{E}[^{[T]}HM^{[T]}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})]_{H}\rightarrow\mathscr{E}[\mathtt{cons}$ $(^{T}HM^{T}$ $v_{M}^{1})$ $(^{[T]}HM^{[T]}$ $v_{M}^{2})]$ \\
-
-\vspace{5pt}
-
-% hm - list - mh cons
-$\mathscr{E}[^{[T]}HM^{[T]}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{H}\rightarrow\mathscr{E}[\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}]$ \\
-
-\vspace{5pt}
-
-% hs - list - cons
-$\mathscr{E}[^{[T]}HS$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{H}\rightarrow\mathscr{E}[\mathtt{cons}$ $(^{T}HS$ $v_{S}^{1})$ $(^{[T]}HS$ $v_{S}^{2})]$ \\
-
-\vspace{5pt}
-
-% hs - list - sh cons
-$\mathscr{E}[^{[T]}HS$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{H}\rightarrow\mathscr{E}[\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}]$ \\
-
-\vspace{5pt}
-
-% hm - list - nil
-$\mathscr{E}[^{[T]}HM^{[T]}$ $\mathtt{nil}^{T}]_{H}\rightarrow\mathscr{E}[\mathtt{nil}^{T}]$ \\
-
-\vspace{5pt}
-
-% hs - list - nil
-$\mathscr{E}[^{[T]}HS$ $\mathtt{nil}]_{H}\rightarrow\mathscr{E}[\mathtt{nil}^{T}]$ \\
-
-\vspace{5pt}
-
-% hs - list error
-$\mathscr{E}[^{[T]}HS$ $v_{S}^{1}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Not a list"$]$ \\
-
-\vspace{5pt}
-
-$\quad(v_{S}^{1}\not\in\lbrace\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3},\mathtt{nil},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace)$ \\
-
-\vspace{5pt}
-
-% hm - lump
-$\mathscr{E}[^{L}HM^{L}$ $(^{L}MS$ $v_{S})]_{H}\rightarrow\mathscr{E}[^{L}HS$ $v_{S}]$ \\
-
-\vspace{5pt}
-
-% hs - label
-$\mathscr{E}[^{T^{a}}HS$ $(SH^{T^{a}}$ $e_{H})]_{H}\rightarrow\mathscr{E}[e_{H}]$ \\
-
-\vspace{5pt}
-
-% hs - label error
-$\mathscr{E}[^{T^{a}}HS$ $v_{S}]_{H}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Parametricity violated"$]$ $(v_{S}\neq SH^{T^{a}}$ $e_{H})$ \\
+$\mathscr{E}[(^{\forall X.T_{1}}HS$ $v_{S})$ $\lbrace T_{2}\rbrace]_{H}\rightarrow\mathscr{E}[^{T_{1}[T^{a}_{2}/X]}HS$ $v_{S}]$
 \end{tabular}
 \caption{Haskell interoperation operational semantics}
 \label{ihos}
