--- a/model/ml/interoperation-operational-semantics.tex
+++ b/model/ml/interoperation-operational-semantics.tex
@@ -3,6 +3,11 @@
 \begin{tabular}{l}
 \vspace{5pt}
 
+% mh - lump
+$\mathscr{E}[^{L}MH^{L}$ $(^{L}HS$ $v_{S})]_{M}\rightarrow\mathscr{E}[^{L}MS$ $v_{S}]$ \\
+
+\vspace{5pt}
+
 % mh - number
 $\mathscr{E}[^{N}MH^{N}$ $\overline{n}]_{M}\rightarrow\mathscr{E}[\overline{n}]$ \\
 
@@ -15,6 +20,55 @@ $\mathscr{E}[^{N}MS$ $\overline{n}]_{M}\rightarrow\mathscr{E}[\overline{n}]$ \\
 
 % ms - number error
 $\mathscr{E}[^{N}MS$ $v_{S}]_{M}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Not a number"$]$ $(v_{S}\neq\overline{n})$ \\
+
+\vspace{5pt}
+
+% mh - list - nil
+$\mathscr{E}[^{[T]}MH^{[T]}$ $\mathtt{nil}^{T}]_{M}\rightarrow\mathscr{E}[\mathtt{nil}^{T}]$ \\
+
+\vspace{5pt}
+
+% mh - list - head cons
+$\mathscr{E}[\mathtt{hd}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{M}\rightarrow\mathscr{E}[^{T}MH^{T}$ $e_{H}^{1}]$ \\
+
+\vspace{5pt}
+
+% mh - list - tail cons
+$\mathscr{E}[\mathtt{tl}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{M}\rightarrow\mathscr{E}[^{[T]}MH^{[T]}$ $e_{H}^{2}]$ \\
+
+\vspace{5pt}
+
+% ms - list - nil
+$\mathscr{E}[^{[T]}MS$ $\mathtt{nil}]_{M}\rightarrow\mathscr{E}[\mathtt{nil}^{T[T_{i}/T_{i}^{a}]}]$ \\
+
+\vspace{5pt}
+
+% ms - list - cons
+$\mathscr{E}[^{[T]}MS$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{M}\rightarrow\mathscr{E}[\mathtt{cons}$ $(^{T}MS$ $v_{S}^{1})$ $(^{[T]}MS$ $v_{S}^{2})]$ \\
+
+\vspace{5pt}
+
+% ms - list - sh cons
+$\mathscr{E}[^{[T]}MS$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{M}\rightarrow\mathscr{E}[^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})]$ \\
+
+\vspace{5pt}
+
+% ms - list error
+$\mathscr{E}[^{[T]}MS$ $v_{S}^{1}]_{M}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Not a list"$]$ \\
+
+\vspace{5pt}
+
+$\quad(v_{S}^{1}\not\in\lbrace\mathtt{nil},\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace)$ \\
+
+\vspace{5pt}
+
+% ms - label
+$\mathscr{E}[^{T^{a}}MS$ $(SM^{T^{a}}$ $v_{M})]_{M}\rightarrow\mathscr{E}[v_{M}]$ \\
+
+\vspace{5pt}
+
+% ms - label error
+$\mathscr{E}[^{T^{a}}MS$ $v_{S}]_{M}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Parametricity violated"$]$ $(v_{S}\neq SM^{T^{a}}$ $v_{M})$ \\
 
 \vspace{5pt}
 
@@ -48,61 +102,7 @@ $\mathscr{E}[^{\forall X.T}MH^{\forall X.T}$ $(^{\forall X.T}HS$ $v_{S})]_{M}\ri
 \vspace{5pt}
 
 % ms - universal
-$\mathscr{E}[(^{\forall X.T_{1}}MS$ $v_{S})$ $\lbrace T_{2}\rbrace]_{M}\rightarrow\mathscr{E}[^{T_{1}[T^{a}_{2}/X]}MS$ $v_{S}]$ \\
-
-\vspace{5pt}
-
-% mh - list - head cons
-$\mathscr{E}[\mathtt{hd}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{M}\rightarrow\mathscr{E}[^{T}MH^{T}$ $e_{H}^{1}]$ \\
-
-\vspace{5pt}
-
-% mh - list - tail cons
-$\mathscr{E}[\mathtt{tl}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{M}\rightarrow\mathscr{E}[^{[T]}MH^{[T]}$ $e_{H}^{2}]$ \\
-
-\vspace{5pt}
-
-% ms - list - cons
-$\mathscr{E}[^{[T]}MS$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})]_{M}\rightarrow\mathscr{E}[\mathtt{cons}$ $(^{T}MS$ $v_{S}^{1})$ $(^{[T]}MS$ $v_{S}^{2})]$ \\
-
-\vspace{5pt}
-
-% ms - list - sh cons
-$\mathscr{E}[^{[T]}MS$ $(SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))]_{M}\rightarrow\mathscr{E}[^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})]$ \\
-
-\vspace{5pt}
-
-% mh - list - nil
-$\mathscr{E}[^{[T]}MH^{[T]}$ $\mathtt{nil}^{T}]_{M}\rightarrow\mathscr{E}[\mathtt{nil}^{T}]$ \\
-
-\vspace{5pt}
-
-% ms - list - nil
-$\mathscr{E}[^{[T]}MS$ $\mathtt{nil}]_{M}\rightarrow\mathscr{E}[\mathtt{nil}^{T}]$ \\
-
-\vspace{5pt}
-
-% ms - list error
-$\mathscr{E}[^{[T]}MS$ $v_{S}^{1}]_{M}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Not a list"$]$ \\
-
-\vspace{5pt}
-
-$\quad(v_{S}^{1}\not\in\lbrace\mathtt{cons}$ $v_{S}^{2}$ $v_{S}^{3},\mathtt{nil},SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})\rbrace)$ \\
-
-\vspace{5pt}
-
-% mh - lump
-$\mathscr{E}[^{L}MH^{L}$ $(^{L}HS$ $v_{S})]_{M}\rightarrow\mathscr{E}[^{L}MS$ $v_{S}]$ \\
-
-\vspace{5pt}
-
-% ms - label
-$\mathscr{E}[^{T^{a}}MS$ $(SM^{T^{a}}$ $v_{M})]_{M}\rightarrow\mathscr{E}[v_{M}]$ \\
-
-\vspace{5pt}
-
-% ms - label error
-$\mathscr{E}[^{T^{a}}MS$ $v_{S}]_{M}\rightarrow\mathscr{E}[\mathtt{wrong}$ ``Parametricity violated"$]$ $(v_{S}\neq SM^{T^{a}}$ $v_{M})$
+$\mathscr{E}[(^{\forall X.T_{1}}MS$ $v_{S})$ $\lbrace T_{2}\rbrace]_{M}\rightarrow\mathscr{E}[^{T_{1}[T^{a}_{2}/X]}MS$ $v_{S}]$
 \end{tabular}
 \caption{ML interoperation operational semantics}
 \label{imos}
