Changed S value SH label T e to SH label T v.

--- a/model/scheme/grammar.tex
+++ b/model/scheme/grammar.tex
@@ -11,7 +11,7 @@ $e_{S}$ & $=$ & $v_{S}$ $\vert$ $x$ $\vert$ $e_{S}$ $e_{S}$ $\vert$ $o$ $e_{S}$ 
 
 \vspace{5pt}
 
-$v_{S}$ & $=$ & $\lambda x.e_{S}$ $\vert$ $\overline{n}$ $\vert$ $\mathtt{nil}$ $\vert$ $\mathtt{cons}$ $v_{S}$ $v_{S}$ $\vert$ $SH^{[T]}$ $(\mathtt{cons}$ $e_{H}$ $e_{H})$ $\vert$ $SH^{T^{a}}$ $e_{H}$ \\
+$v_{S}$ & $=$ & $\lambda x.e_{S}$ $\vert$ $\overline{n}$ $\vert$ $\mathtt{nil}$ $\vert$ $\mathtt{cons}$ $v_{S}$ $v_{S}$ $\vert$ $SH^{[T]}$ $(\mathtt{cons}$ $e_{H}$ $e_{H})$ $\vert$ $SH^{T^{a}}$ $v_{H}$ \\
 
 \vspace{5pt}
 
