Removed the type label line from the H and M grammars.

--- a/model/haskell/grammar.tex
+++ b/model/haskell/grammar.tex
@@ -19,10 +19,6 @@ $T$ & $=$ & $L$ $\vert$ $N$ $\vert$ $X$ $\vert$ $[T]$ $\vert$ $T^{a}$ $\vert$ $T
 
 \vspace{5pt}
 
-$a$ & $=$ & Type labels (a, b, \ldots) \\
-
-\vspace{5pt}
-
 $o$ & $=$ & $+$ $\vert$ $-$ \\
 
 \vspace{5pt}
@@ -38,5 +34,5 @@ $E_{H}$ & $=$ & $[\,]_{H}$ $\vert$ $E_{H}$ $e_{H}$ $\vert$ $E_{H}$ $\lbrace T\rb
 && $\vert$ $\mathtt{if0}$ $E_{H}$ $e_{H}$ $e_{H}$ $\vert$ $f$ $E_{H}$ $\vert$ $\mathtt{fix}$ $E_{H}$ $\vert$ $^{T}HM^{T}$ $E_{M}$ $\vert$ $^{T}HS$ $E_{S}$
 \end{tabular}
 \caption{Haskell grammar and evaluation contexts}
-\label{chg}
+\label{hg}
 \end{figure}
