--- a/model/ml/grammar.tex
+++ b/model/ml/grammar.tex
@@ -27,10 +27,6 @@ $T$ & $=$ & $L$ $\vert$ $N$ $\vert$ $X$ $\vert$ $[T]$ $\vert$ $T^{a}$ $\vert$ $T
 
 \vspace{5pt}
 
-$a$ & $=$ & Type labels (a, b, \ldots) \\
-
-\vspace{5pt}
-
 $o$ & $=$ & $+$ $\vert$ $-$ \\
 
 \vspace{5pt}
@@ -50,5 +46,5 @@ $E_{M}$ & $=$ & $[\,]_{M}$ $\vert$ $E_{M}$ $e_{M}$ $\vert$ $v_{M}$ $E_{M}$ $\ver
 && $\vert$ $^{T}MH^{T}$ $E_{H}$ $\vert$ $^{T}MS$ $E_{S}$
 \end{tabular}
 \caption{ML grammar and evaluation contexts}
-\label{cmg}
+\label{mg}
 \end{figure}
